# KnEL

./: .gitignore  Makefile  README.md  dune-project
meta/: knl.icns
src/: alpha-renaming.ml  alpha_renaming.ml  ast.ml  astprinter.ml  base_tactics.ml  beta_red.ml  code_random.ml  config.ml  constants.ml  dune  environment.ml  envprinter.ml  fileProceeding.ml  knelState.ml  knelprinter.ml  lexer.mll  main.ml  parser.mly  parsing.ml  renaming.ml  substitution.ml  tactic.ml  typer.ml
src/dependencies/: graph.ml  knel_modules.ml
src/display/: astprinter.ml  astprinter_utilities.ml  envprinter.ml  knelprinter.ml
src/frontend/: cstGenerator.ml  dune  lexer.mll  location.ml  parser.mly  parsing.ml  priorityManager.ml  tactic.ml
src/kernel/: alpha_renaming.ml  base_tactics.ml  beta_red.ml  constants.ml  environment.ml  fileProceeding.ml  inductive.ml  instructionHandler.ml  knelState.ml  primitives.knl  renaming.ml  substitution.ml  typer.ml
src/main/: ast.ml  config.ml  config.mli  main.ml
stdlib/ord/: basic.knl
tests/: Lib.knl  dep_types_test.knl  dune  test0.knl  test1.expected  test1.knl  test3.knl  test5.knl  topology.knl
tests/num/: test_num.knl
