(include_subdirs unqualified)

(library
 (name parse)
 (modules tactic location ast parser lexer priorityManager))

(rule (target constants.ml) (deps (file kernel/primitives.knl)) (action (run ./cstGenerator.exe)))

(executable
	(libraries parse)
	(name cstGenerator)
	(modules cstGenerator))

(executable
	(promote (until-clean))
	(preprocess (pps ppx_deriving.show))
	(libraries parse)
	(name main)
	(modules :standard \ tactic location ast parser lexer cstGenerator priorityManager))
